# glimmora-auth

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/glimmora_auth/: __init__.py  cleanup.py  config.py  dependencies.py  emailer.py  models.py  ratelimit.py  router.py  security.py
tests/: conftest.py  test_auth_endpoints.py  test_cleanup.py  test_config.py  test_models.py  test_ratelimit.py  test_security.py
